<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="20"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:weightSum="20"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_enter_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/please_enter_user_name"
            android:layout_weight="1"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/pwd_enter_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/please_enter_password"
            android:layout_weight="1"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/lightblue"
            android:text="@string/login"
            android:layout_weight="2
"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remembler_username_password"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="518dp" />

            <Button
                android:id="@+id/register_an_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:background="@android:color/transparent"
                android:text="@string/register_an_account" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>