<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<android.support.v7.widget.Toolbar
    android:id="@+id/registerBar"
    android:layout_width="match_parent"
    android:background="?attr/colorPrimary"
    android:layout_height="?attr/actionBarSize">
    <include layout="@layout/register_bar"/>
</android.support.v7.widget.Toolbar>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="20">
    <EditText
        android:id="@+id/user_enter_register"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/please_enter_user_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/pwd_enter_register"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/please_enter_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:background="@color/lightblue"
        android:text="@string/registered"
        android:textSize="20sp"
 />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@color/red"
        android:text="@string/cancel"
        android:textSize="20sp" />
</LinearLayout>
</RelativeLayout>